Fix overflow

--- a/style/_main.sass
+++ b/style/_main.sass
@@ -10,6 +10,9 @@ h1, h2, h3, h4, h5, h6, p
 article
   overflow: hidden
 
+body
+  overflow-x: hidden
+
 *, html 
   scroll-behavior: smooth !important
 
