--- a/style/blocks/_header.sass
+++ b/style/blocks/_header.sass
@@ -155,7 +155,7 @@
       background-color: $background
       padding-top: 5px
       border-top: none
-      width: 100vw
+      width: 100%
       visibility: hidden
       opacity: 0
       transform: translateY(0.5rem)
